# AppAnimal

./: .envtemplate  .gitattributes  .gitignore  README.md  package-lock.json  pyproject.toml
Docker-AppAnimal/: Dockerfile-db
app/: main.py  utils.py
app/DDL/: dao.py
app/models/: dao.py  models_animal.py
app/public/: animal.css  animal.html  card.css  card.html  index.css  index.html  index.js  list-animal.css  list-animal.html
app/public/animal/: animal.css  animal.html  animal.js
app/public/card/: card-edit.css  card-edit.html  card-edit.js  card.css  card.html  card.js
app/public/list-animal/: list-animal.css  list-animal.html  list-animal.js
app/routes/: animal.py
app/schemas/: animal.py
media/: AppAnimal video.mkv  cat.jfif  dog.jfif  pinguim.jfif
test/: fodase.py
